<resources>
    <string name="app_name">Gowes</string>
    <string name="my_app_id">gowesforumandroid-klwks</string>
    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
    <string name="bottom_app_bar_logo_content_desc">Reply logo</string>
    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
    <string name="fab_compose_email_content_description">Compose new email</string>
    <string name="fab_comment_post_content_description">Comment post</string>
    <string name="error_email">Email is invalid</string>
    <string name="error_password">Password cannot be empty</string>
    <string name="error_subject">Subject cannot be empty</string>
    <string name="reply_subject">Reply cannot be empty</string>
    <string name="error_community_name">Name cannot be empty</string>
    <string name="error_community_province">Province cannot be empty</string>
    <string name="error_community_city">City cannot be empty</string>
    <string name="menu_item_report">Report</string>
    <string name="menu_item_forward">Forward</string>
    <string name="menu_item_reply">Reply</string>
    <string name="menu_item_reply_all">Reply all</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_star">Bookmark</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_log_out">Log Out</string>
    <string name="menu_item_join">Join</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_top_post">Top Post</string>
    <string name="menu_item_newest_post">Newest Post</string>
    <string name="menu_item_top_comment">Top Comment</string>
    <string name="menu_item_newest_comment">Newest Comment</string>
    <string name="menu_dark_theme_light">Light</string>
    <string name="menu_dark_theme_dark">Dark</string>
    <string name="menu_dark_theme_battery_saver">Set by Battery Saver</string>
    <string name="menu_dark_theme_system_default">System default</string>
    <string name="nav_home">Home</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_community">Community</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="nav_create_community">Create Community</string>
    <string name="navigation_empty"> </string>
    <string name="navigation_trash">Trash</string>
    <string name="navigation_spam">Spam</string>
    <string name="navigation_drafts">Drafts</string>
    <string name="gowes_logo_content_desc">Gowes image of sender</string>
    <string name="register_back_content_desc">Back from register</string>
    <string name="register_create_account">Find your\nbike community now!</string>
    <string name="register_setup_account">Setup your account</string>
    <string name="email_sender_profile_content_desc">Profile image of sender</string>
    <string name="navigate_back_icon_content_desc">Navigate back</string>
    <string name="mark_up_vote_post_snack_bar_message">Marked as up vote.</string>
    <string name="mark_down_vote_post_snack_bar_message">Marked as down vote.</string>
    <string name="un_mark_up_vote_post_snack_bar_message">Unmarked as up vote.</string>
    <string name="un_mark_down_vote_post_snack_bar_message">Unmarked as down vote.</string>
    <string name="mark_bookmark_post_snack_bar_message">Marked as bookmark.</string>
    <string name="un_mark_bookmark_post_snack_bar_message">Unmarked as bookmark.</string>
    <string name="profile_has_been_updated">Your profile has been updated.</string>
    <string name="community_profile_has_been_updated">Community profile has been updated.</string>
    <string name="waiting_for_admin_approval">Waiting for admin approval.</string>
    <string name="transfer_leader_position">Please transfer the leader position to another member before leave the community</string>
    <string name="email_recipient_to">To %1$s</string>
    <string name="email_card_transition_name">email_card_%1$s</string>
    <string name="profile_image_transition_name">profile_image_%1$s</string>
    <string name="community_image_transition_name">community_image_%1$s</string>
    <string name="attachment_transition_name">attachment_%1$s</string>
    <string name="compose_close_content_desc">Close editing email</string>
    <string name="compose_send_content_desc">Send email</string>
    <string name="compose_add_recipient_icon_content_desc">Add recipient</string>
    <string name="compose_title_hint">Title</string>
    <string name="compose_body_hint">Body…</string>
    <string name="compose_recipient_group_content_desc">Recipients</string>
    <string name="compose_add_reply">Add Reply</string>
    <string name="compose_content_reply">Your Reply</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in with email</string>
    <string name="reset_password">Reset your password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="biodata">Biodata</string>
    <string name="type">Type</string>
    <string name="survey_question">Survey Question</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="re_type_password">Retype password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Don\'t have an account? Sign-up now</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="choose_image">Choose Image</string>
    <string name="top_comment">Top Comment</string>
    <string name="top_post">Top Post</string>
    <string name="top_community">Top Community</string>
    <string name="join_community">Join Community</string>
    <string name="leave_community">Are you sure want to LEAVE?</string>
    <string name="accept_member">Are you sure want to ACCEPT this user?</string>
    <string name="reject_member">Are you sure want to REJECT this user?</string>
    <string name="appoint_admin_member">Are you sure want to APPOINT this user as admin?</string>
    <string name="expel_member">Are you sure want to EXPEL this user?</string>
    <string name="join_community_yet">You are not in a community yet</string>
    <string name="community_list">Community List</string>
    <string name="member_list">Member List</string>
    <string name="new_chat">New Chat</string>
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.
    </string>
    <string name="community_member">Member</string>
    <string name="show_all">Show all</string>
    <string name="search_hint">Search Community</string>
    <string name="search_person">Search for person</string>
    <string name="community_tab">Community</string>
    <string name="post_tab">Post</string>
    <string name="member_tab">Member</string>
    <string name="request_tab">Request</string>
    <string name="profile_community_label">Community</string>
    <string name="profile_line_divider">Profile line divider</string>
    <string name="delete_post_message">Delete post?</string>
    <string name="request_button">Request</string>
    <string name="leave_button">Leave</string>
    <string name="ok_button">Ok</string>
    <string name="delete_button">Delete</string>
    <string name="bookmark_button">Bookmark</string>
    <string name="accept_button">Accept</string>
    <string name="reject_button">Reject</string>
    <string name="appoint_admin_button">Appoint as admin</string>
    <string name="expel_button">Expel</string>
    <string name="join_button">Join</string>
    <string name="cancel_button">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="private_community">Private</string>
    <string name="admin">Admin</string>
    <string name="shared_image_transition">shared_image_transition_%1$d</string>
    <string name="title_chat">Chat</string>
    <string name="title_feed">Feed</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_faq">Frequently Ask Question</string>
    <string name="title_community">Community</string>
    <string name="title_login">Login</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string-array name="community_types">
        <item>Road Bikes</item>
        <item>Cyclocross Bikes</item>
        <item>Touring Bikes</item>
        <item>Adventure Road Bikes</item>
        <item>Triathlon/Time Trial Bikes</item>
        <item>Fitness Bikes</item>
        <item>Track/Fixed-Gear Bikes</item>
        <item>Mountain Bikes</item>
        <item>Hybrid Bikes</item>
        <item>Dual-Sport Bikes</item>
        <item>Cruiser Bikes</item>
        <item>Flat-Foot Comfort Bikes</item>
        <item>City Bikes</item>
        <item>BMX Bikes</item>
        <item>Folding Bikes</item>
        <item>Recumbent Bikes</item>
        <item>Tandem Bikes</item>
    </string-array>
</resources>